fix z-index of recenter button, improve layout of active playlists modal

--- a/core/static/css/style.css
+++ b/core/static/css/style.css
@@ -76,7 +76,7 @@ html, body {
   height: 40px;
   width: 40px;
   display: none;
-  z-index: 50;
+  z-index: 30;
 }
 
 #recenter-button:focus {
